--- a/files/html/examples/index.html
+++ b/files/html/examples/index.html
@@ -20,8 +20,9 @@
 
     <h1>HTML, CSS and JavaScript</h1>
 
-    <p><a href="example1/index.html">Example 1</a>: basic examples using vanilla JS and jQuery</p>
-    <p><a href="example2/index.html">Example 2</a>: more advanced examples using JS and jQuery</p>
+    <p><a href="example1/index.html">Example 1</a>: Basic examples using vanilla JS and jQuery</p>
+    <p><a href="example2/index.html">Example 2</a>: More advanced examples using JS and jQuery</p>
+    <p><a href="example3/index.html">Example 3</a>: Adanced JS concepts: classes, arrow functions and AJAX</p>
 
   </body>
 </html>
