--- a/files/html/examples/example3/index.html
+++ b/files/html/examples/example3/index.html
@@ -18,9 +18,12 @@
 
     <div class="classes section">
       <h2>Classes</h2>
-      <p>
-        <button>Click me</button> =&gt; <span class="result"></span>
-      </p>
+      <p><button>Click me</button> =&gt; <span class="result"></span></p>
+    </div>
+
+    <div class="functions section">
+      <h2>Functions</h2>
+      <p><button>Click me</button> =&gt; <span class="result"></span></p>
     </div>
 
     <script src="js/Robot.js"></script>
