Organize the code with setupExample function

--- a/files/html/examples/example3/index.html
+++ b/files/html/examples/example3/index.html
@@ -16,6 +16,14 @@
 
     <h1>Advanced JS</h1>
 
+    <p>
+      We're using features from the new JavaScript version, known as ECMAScript 6 (or ES6 for short).
+    </p>
+    <p>
+      Here you can see a <a target="_blank" href="https://kangax.github.io/compat-table/es6/">compatibiliy table</a>.
+      Most new browsers have already implemented most of the features.
+    </p>
+
     <div class="classes section">
       <h2>Classes</h2>
       <p><button>Click me</button> =&gt; <span class="result"></span></p>
