--- a/files/html/examples/example3/index.html
+++ b/files/html/examples/example3/index.html
@@ -34,6 +34,12 @@
       <p><button>Click me</button> =&gt; <span class="result"></span></p>
     </div>
 
+    <div class="callbacks section">
+      <h2>Callbacks</h2>
+      <p><button>Click me</button> =&gt; <span class="result"></span></p>
+    </div>
+
+
     <script src="js/Robot.js"></script>
     <script src="js/main.js"></script>
 
