--- a/files/html/examples/example3/index.html
+++ b/files/html/examples/example3/index.html
@@ -39,6 +39,11 @@
       <p><button>Click me</button> =&gt; <span class="result"></span></p>
     </div>
 
+    <div class="ajax section">
+      <h2>AJAX</h2>
+      <p><input value="codethen"><button>Search on GitHub</button> =&gt; <span class="result"></span></p>
+    </div>
+
 
     <script src="js/Robot.js"></script>
     <script src="js/main.js"></script>
