Example 3: ajax with fetch

--- a/files/html/examples/example3/index.html
+++ b/files/html/examples/example3/index.html
@@ -26,22 +26,27 @@
 
     <div class="classes section">
       <h2>Classes</h2>
-      <p><button>Click me</button> =&gt; <span class="result"></span></p>
+      <p><button>Turn on the robot</button> =&gt; <span class="result"></span></p>
     </div>
 
     <div class="functions section">
       <h2>Functions</h2>
-      <p><button>Click me</button> =&gt; <span class="result"></span></p>
+      <p><button>Run the functions</button> =&gt; <span class="result"></span></p>
     </div>
 
     <div class="callbacks section">
       <h2>Callbacks</h2>
-      <p><button>Click me</button> =&gt; <span class="result"></span></p>
+      <p><button>Turn on the robot</button> =&gt; <span class="result"></span></p>
     </div>
 
     <div class="ajax section">
-      <h2>AJAX</h2>
-      <p><input value="codethen"><button>Search on GitHub</button> =&gt; <span class="result"></span></p>
+      <h2>AJAX (XMLHttpRequest)</h2>
+      <p><input><button>Search on GitHub</button> =&gt; <span class="result"></span></p>
+    </div>
+
+    <div class="fetch section">
+      <h2>AJAX (fetch)</h2>
+      <p><input><button>Search on GitHub</button> =&gt; <span class="result"></span></p>
     </div>
 
 
