Example 3: ajax with axios

--- a/files/html/examples/example3/index.html
+++ b/files/html/examples/example3/index.html
@@ -49,7 +49,12 @@
       <p><input><button>Search on GitHub</button> =&gt; <span class="result"></span></p>
     </div>
 
+    <div class="axios section">
+      <h2>AJAX (axios)</h2>
+      <p><input><button>Search on GitHub</button> =&gt; <span class="result"></span></p>
+    </div>
 
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="js/Robot.js"></script>
     <script src="js/main.js"></script>
 
