Example 3: change style of ajax group

--- a/files/html/examples/example3/index.html
+++ b/files/html/examples/example3/index.html
@@ -39,19 +39,25 @@
       <p><button>Turn on the robot</button> =&gt; <span class="result"></span></p>
     </div>
 
-    <div class="ajax section">
-      <h2>AJAX (XMLHttpRequest)</h2>
-      <p><input><button>Search on GitHub</button> =&gt; <span class="result"></span></p>
-    </div>
+    <div class="ajax section group">
 
-    <div class="fetch section">
-      <h2>AJAX (fetch)</h2>
-      <p><input><button>Search on GitHub</button> =&gt; <span class="result"></span></p>
-    </div>
+      <h2>AJAX requests</h2>
 
-    <div class="axios section">
-      <h2>AJAX (axios)</h2>
-      <p><input><button>Search on GitHub</button> =&gt; <span class="result"></span></p>
+      <div class="ajax section">
+        <h3>Using XMLHttpRequest</h3>
+        <p><input><button>Search on GitHub</button> =&gt; <span class="result"></span></p>
+      </div>
+
+      <div class="fetch section">
+        <h3>Using fetch</h3>
+        <p><input><button>Search on GitHub</button> =&gt; <span class="result"></span></p>
+      </div>
+
+      <div class="axios section">
+        <h3>Using axios</h3>
+        <p><input><button>Search on GitHub</button> =&gt; <span class="result"></span></p>
+      </div>
+
     </div>
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
