Page about me (using Vue)

--- a/es/index.html
+++ b/es/index.html
@@ -84,7 +84,7 @@
       <li>Desarrollador backend, frontend y móvil durante +10 años, actualmente en <a href="https://www.gymforless.com">GymForLess</a>.</li>
       <li>Trabajé de profesor en <a href="https://www.ironhack.com">Ironhack</a> y <a href="http://www.ubiqum.com">Ubiqum</a>.</li>
       <li>Estudié en <a href="http://www.upc.edu">UPC</a>, donde di mis primeras clases como profesor.</li>
-      <li>Me gusta la <a href="https://open.spotify.com/user/1134322859/playlist/60ljoz5G5Aam1PYDK0puo5">música</a>, el <a href="http://www.filmaffinity.com/es/userratings.php?user_id=182676&orderby=0">cine</a>, los <a href="https://androidapping.wordpress.com">videojuegos</a> y el deporte. Oh, <a href="http://codethen.com/fmaylinch.html">programar y enseñar también</a>!</li>
+      <li>Me gusta la <a href="https://open.spotify.com/user/1134322859/playlist/60ljoz5G5Aam1PYDK0puo5">música</a>, el <a href="http://www.filmaffinity.com/es/userratings.php?user_id=182676&orderby=0">cine</a>, los <a href="https://androidapping.wordpress.com">videojuegos</a> y el deporte. Oh, <a href="http://codethen.com/me">programar y enseñar también</a>!</li>
     </ul>
 
 
@@ -397,7 +397,7 @@
 
   <footer>
     <div>
-      <span>por <a href="http://codethen.com/fmaylinch.html">Ferran Maylinch</a></span>
+      <span>por <a href="http://codethen.com/me">Ferran Maylinch</a></span>
       <span>iconos de <a href="https://thenounproject.com/charlenehea/collection/ios-toolbar-icons-glyph/">Heah Poh Lin</a></span>
     </div>
   </footer>
