--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <li>Back-end, front-end and mobile developer for +10 years, currently at <a href="https://www.gymforless.com">GymForLess</a>.</li>
       <li>I've worked as a teacher at <a href="https://www.ironhack.com">Ironhack</a> and <a href="http://www.ubiqum.com">Ubiqum</a>.</li>
       <li>Studied at <a href="http://www.upc.edu">UPC</a>, where I also started teaching.</li>
-      <li>I like <a href="https://open.spotify.com/user/1134322859/playlist/60ljoz5G5Aam1PYDK0puo5">music</a>, <a href="http://www.filmaffinity.com/es/userratings.php?user_id=182676&orderby=0">movies</a>, sports and <a href="https://androidapping.wordpress.com">videogames</a>. Oh, <a href="http://codethen.com/fmaylinch.html">coding and teaching too</a>!</li>
+      <li>I like <a href="https://open.spotify.com/user/1134322859/playlist/60ljoz5G5Aam1PYDK0puo5">music</a>, <a href="http://www.filmaffinity.com/es/userratings.php?user_id=182676&orderby=0">movies</a>, sports and <a href="https://androidapping.wordpress.com">videogames</a>. Oh, <a href="http://codethen.com/me">coding and teaching too</a>!</li>
     </ul>
 
 
@@ -398,7 +398,7 @@
 
   <footer>
     <div>
-      <span>by <a href="http://codethen.com/fmaylinch.html">Ferran Maylinch</a></span>
+      <span>by <a href="http://codethen.com/me">Ferran Maylinch</a></span>
       <span>icons by <a href="https://thenounproject.com/charlenehea/collection/ios-toolbar-icons-glyph/">Heah Poh Lin</a></span>
     </div>
   </footer>
