Fix relative paths in Vue app (/me)

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
 
     <ul>
-      <li>My name is <a href="https://www.linkedin.com/in/ferranmaylinch">Ferran Maylinch</a>.</li>
+      <li>My name is <a href="http://codethen.com">Ferran Maylinch</a>.</li>
       <li>Back-end, front-end and mobile developer for +10 years, currently at <a href="https://www.gymforless.com">GymForLess</a>.</li>
       <li>I've worked as a teacher at <a href="https://www.ironhack.com">Ironhack</a> and <a href="http://www.ubiqum.com">Ubiqum</a>.</li>
       <li>Studied at <a href="http://www.upc.edu">UPC</a>, where I also started teaching.</li>
