Fix links missing '/me'

--- a/es/index.html
+++ b/es/index.html
@@ -80,7 +80,7 @@
     <h1><img class="title-icon" src="../code-then/icons/profile.svg"> Acerca de mí</h1>
 
     <ul>
-      <li>Soy <a href="http://codethen.com">Ferran Maylinch</a>.</li>
+      <li>Soy <a href="http://codethen.com/me">Ferran Maylinch</a>.</li>
       <li>Desarrollador backend, frontend y móvil durante +10 años, actualmente en <a href="https://www.gymforless.com">GymForLess</a>.</li>
       <li>Trabajé de profesor en <a href="https://www.ironhack.com">Ironhack</a> y <a href="http://www.ubiqum.com">Ubiqum</a>.</li>
       <li>Estudié en <a href="http://www.upc.edu">UPC</a>, donde di mis primeras clases como profesor.</li>
