--- a/html-tutorial/startup/index-6.html
+++ b/html-tutorial/startup/index-6.html
@@ -19,7 +19,7 @@
   <div>
     <h2 class="small-title">Introduction</h2>
   </div>
-  <p>I'm using this page to display <a href="http://www.cutestpaw.com/tag/cats">cat pictures</a> again.</p>
+  <p>I'm using this page to display <a href="https://www.shutterstock.com/search/cat">cat pictures</a> again.</p>
   <div>
     <h2 class="small-title">Some pictures</h2>
   </div>
