--- a/html-tutorial/startup/index-7.html
+++ b/html-tutorial/startup/index-7.html
@@ -22,7 +22,7 @@
     <div>
       <h2 class="small-title">Introduction</h2>
     </div>
-    <p>I'm using this amazing page to display... yes, <a href="http://www.cutestpaw.com/tag/cats">kitty pictures</a>!</p>
+    <p>I'm using this amazing page to display... yes, <a href="https://www.shutterstock.com/search/cat">kitty pictures</a>!</p>
   </div>
   
   <div class="section">
