Fix some sentences in CV

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>Hi, I'm <strong id="name">Ferran Maylinch</strong></h1>
-							<p>I <span id="activities">code and sometimes teach</span></p>
+							<p>I <span id="activities">frequently code and sometimes teach</span></p>
 							<p>Now I'm working at <span id="job"><a href="https://cloud.yandex.com/en/">Yandex Cloud</a></span></p>
 						</div>
 					</section>
@@ -49,8 +49,8 @@
 									<div class="field">
 <textarea name="message" id="message" rows="10">
 update("name", [ "May" ]);
-update("activities", [ "read", "write", link("try to write songs", "https://soundcloud.com/ferran-maylinch") ]);
-update("job", [ "coding", link("Security services", "https://cloud.yandex.com/en/services#security") ]);
+update("activities", [ "read", "workout", link("write songs", "https://soundcloud.com/ferran-maylinch") ]);
+update("job", [ "becoming a " + link("famous Youtuber", "https://www.youtube.com/user/ferranmaylinch") ]);
 
 function update(id, values) {
 	document.getElementById(id).innerHTML = values.length == 1
