CV - fix linked-in link

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 								<li><a target="_blank" href="https://www.instagram.com/fmaylinch/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 								<li><a target="_blank" href="https://t.me/fmaylinch" class="icon brands fa-telegram"><span class="label">Telegram</span></a></li>
 								<li><a target="_blank" href="https://www.youtube.com/user/ferranmaylinch" class="icon brands fa-youtube"><span class="label">Youtube</span></a></li>
-								<li><a target="_blank" href="#https://www.linkedin.com/in/ferranmaylinch/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<li><a target="_blank" href="https://www.linkedin.com/in/ferranmaylinch/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 							</ul>
 						</div>
 					</section>
