CV - bigger code editor in mobile

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 		<link rel="stylesheet" href="codemirror/theme/ambiance.css">
 		<link rel="stylesheet" href="codemirror/theme/ambiance-mobile.css">
 		<script src="codemirror/mode/javascript/javascript.js"></script>
+		<style>
+		</style>
 	</head>
 	<body class="is-preload">
 
@@ -37,18 +39,22 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1>Hi, I'm <strong id="name">Ferran Maylinch</strong></h1>
-							<p>I <span id="activities">frequently code and sometimes teach</span></p>
-							<p>Now I <span id="job">work at <a target="_blank" href="https://cloud.yandex.com/en/">Yandex Cloud</a></span></p>
+							<div>
+								<h1>Hi, I'm <strong id="name">Ferran Maylinch</strong></h1>
+								<p>I <span id="activities">frequently code and sometimes teach</span></p>
+								<p>Now I <span id="job">work at <a target="_blank" href="https://cloud.yandex.com/en/">Yandex Cloud</a></span></p>
+							</div>
 						</div>
 					</section>
 
 				<!-- Three -->
 					<section id="three" class="wrapper style3 fade-up">
 						<div class="inner">
-							<ul class="actions">
-								<li><a href="#" class="button submit">Update data above (just for fun)</a></li>
-							</ul>
+							<div>
+								<ul class="actions">
+									<li><a href="#" class="button submit">Update data above (just for fun)</a></li>
+								</ul>
+							</div>
 							<form method="post" action="#">
 								<div class="fields">
 									<div class="field">
@@ -56,14 +62,16 @@
 									</div>
 								</div>
 							</form>
-							<h3>Social Networks</h3>
-							<ul class="icons">
-								<li><a target="_blank" href="https://github.com/fmaylinch" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-								<li><a target="_blank" href="https://www.instagram.com/fmaylinch/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a target="_blank" href="https://t.me/fmaylinch" class="icon brands fa-telegram"><span class="label">Telegram</span></a></li>
-								<li><a target="_blank" href="https://www.youtube.com/user/ferranmaylinch" class="icon brands fa-youtube"><span class="label">Youtube</span></a></li>
-								<li><a target="_blank" href="https://www.linkedin.com/in/ferranmaylinch/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-							</ul>
+							<div>
+								<h3>Social Networks</h3>
+								<ul class="icons">
+									<li><a target="_blank" href="https://github.com/fmaylinch" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									<li><a target="_blank" href="https://www.instagram.com/fmaylinch/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a target="_blank" href="https://t.me/fmaylinch" class="icon brands fa-telegram"><span class="label">Telegram</span></a></li>
+									<li><a target="_blank" href="https://www.youtube.com/user/ferranmaylinch" class="icon brands fa-youtube"><span class="label">Youtube</span></a></li>
+									<li><a target="_blank" href="https://www.linkedin.com/in/ferranmaylinch/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								</ul>
+							</div>
 						</div>
 					</section>
 
@@ -72,11 +80,13 @@
 		<!-- Footer -->
 			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
-					<ul class="menu">
-						<li>Template by <a target="_blank" href="http://html5up.net">HTML5 UP</a></li>
-						<li>Code editor by <a target="_blank" href="https://codemirror.net/">CodeMirror</a></li>
-						<li>Programming answers by <a target="_blank" href="https://stackoverflow.com/">StackOverflow</a></li>
-					</ul>
+					<div>
+						<ul class="menu">
+							<li>Template by <a target="_blank" href="http://html5up.net">HTML5 UP</a></li>
+							<li>Code editor by <a target="_blank" href="https://codemirror.net/">CodeMirror</a></li>
+							<li>Programming answers by <a target="_blank" href="https://stackoverflow.com/">StackOverflow</a></li>
+						</ul>
+					</div>
 				</div>
 			</footer>
 
