--- a/index.html
+++ b/index.html
@@ -14,7 +14,15 @@
 		<script src="codemirror/lib/codemirror.js"></script>
 		<link rel="stylesheet" href="codemirror/lib/codemirror.css">
 		<link rel="stylesheet" href="codemirror/theme/ambiance.css">
-		<link rel="stylesheet" href="codemirror/theme/ambiance-mobile.css">
+		<link rel="stylesheet" href="codemirror/theme/darcula.css">
+		<link rel="stylesheet" href="codemirror/theme/dracula.css">
+		<link rel="stylesheet" href="codemirror/theme/material-palenight.css">
+		<link rel="stylesheet" href="codemirror/theme/material.css">
+		<link rel="stylesheet" href="codemirror/theme/nord.css">
+		<link rel="stylesheet" href="codemirror/theme/oceanic-next.css">
+		<link rel="stylesheet" href="codemirror/theme/panda-syntax.css">
+		<link rel="stylesheet" href="codemirror/theme/shadowfox.css">
+		<link rel="stylesheet" href="codemirror/theme/zenburn.css">
 		<script src="codemirror/mode/javascript/javascript.js"></script>
 		<style>
 		</style>
@@ -41,8 +49,8 @@
 						<div class="inner">
 							<div>
 								<h1>Hi, I'm <strong id="name">Ferran Maylinch</strong></h1>
-								<p>I <span id="activities">frequently code and sometimes teach</span></p>
-								<p>Now I <span id="job">work at <a target="_blank" href="https://cloud.yandex.com/en/">Yandex Cloud</a></span></p>
+								<p>I like to <span id="like">code and teach</span></p>
+								<p>Now I <span id="now">work at <a target="_blank" href="https://cloud.yandex.com/en/">Yandex Cloud</a></span></p>
 							</div>
 						</div>
 					</section>
