CV - display errors

--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
 						</div>
 					</section>
 
+				<div id="errors"></div>
+
 				<!-- Three -->
 					<section id="three" class="wrapper style3 fade-up">
 						<div class="inner">
