CV - simplify text and button

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<div>
-								<h1>Hi, I'm <strong id="name">Ferran Maylinch</strong></h1>
+								<h1>Hi, I'm <strong id="name">Ferran</strong></h1>
 								<p>I like to <span id="like">code and teach</span></p>
 								<p>Now I <span id="now">work at <a target="_blank" href="https://cloud.yandex.com/en/">Yandex Cloud</a></span></p>
 							</div>
@@ -62,7 +62,7 @@
 						<div class="inner">
 							<div>
 								<ul class="actions">
-									<li><a href="#" class="button submit">Update data above (just for fun)</a></li>
+									<li><a href="#" class="button submit">Run the code (just for fun)</a></li>
 								</ul>
 							</div>
 							<form method="post" action="#">
