--- a/index.html
+++ b/index.html
@@ -13,19 +13,10 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<script src="codemirror/lib/codemirror.js"></script>
 		<link rel="stylesheet" href="codemirror/lib/codemirror.css">
-		<link rel="stylesheet" href="codemirror/theme/ambiance.css">
-		<link rel="stylesheet" href="codemirror/theme/darcula.css">
-		<link rel="stylesheet" href="codemirror/theme/dracula.css">
-		<link rel="stylesheet" href="codemirror/theme/material-palenight.css">
-		<link rel="stylesheet" href="codemirror/theme/material.css">
-		<link rel="stylesheet" href="codemirror/theme/nord.css">
-		<link rel="stylesheet" href="codemirror/theme/oceanic-next.css">
 		<link rel="stylesheet" href="codemirror/theme/panda-syntax.css">
-		<link rel="stylesheet" href="codemirror/theme/shadowfox.css">
-		<link rel="stylesheet" href="codemirror/theme/zenburn.css">
 		<script src="codemirror/mode/javascript/javascript.js"></script>
-		<style>
-		</style>
+		<meta property="og:image" content="http://fmaylinch.github.io/assets/may.png" />
+		<meta itemprop="image" content="http://fmaylinch.github.io/assets/code-then-white.jpg">
 	</head>
 	<body class="is-preload">
 
