--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<div>
+							<div id="all">
 								<h1>Hi, I'm <strong id="name">Ferran</strong></h1>
 								<p>I like to <span id="like">code and teach</span></p>
 								<p>Now I <span id="now">work at <a target="_blank" href="https://cloud.yandex.com/en/">Yandex Cloud</a></span></p>
