CV - explain code / reset button

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<div id="all">
-								<h1>Hi, I'm <strong id="name">Ferran</strong></h1>
-								<p>I like to <span id="like">code and teach</span></p>
-								<p>Now I <span id="now">work at <a target="_blank" href="https://cloud.yandex.com/en/">Yandex Cloud</a></span></p>
+							<div id="main">
+								<h1 id="title">Hi, I'm <strong>Ferran</strong></h1>
+								<p id="text1">I like to code and teach</p>
+								<p id="text2">Now I work at <a target="_blank" href="https://cloud.yandex.com/en/">Yandex Cloud</a></p>
 							</div>
 						</div>
 					</section>
@@ -53,7 +53,8 @@
 						<div class="inner">
 							<div>
 								<ul class="actions">
-									<li><a href="#" class="button submit">Run the code (just for fun)</a></li>
+									<li><a href="#" class="button run submit">Run the code below</a></li>
+									<li><a href="#" class="button reset">Reset</a></li>
 								</ul>
 							</div>
 							<form method="post" action="#">
