CV - put reset button below the code

--- a/index.html
+++ b/index.html
@@ -54,12 +54,14 @@
 							<div>
 								<ul class="actions">
 									<li><a href="#" class="button run submit">Run the code below</a></li>
-									<li><a href="#" class="button reset">Reset</a></li>
 								</ul>
 							</div>
 							<form method="post" action="#">
 								<textarea name="message" id="message" rows="10"></textarea>
 							</form>
+							<ul class="actions">
+								<li><a href="#" class="button reset">Reset code</a></li>
+							</ul>
 							<div>
 								<h3>Social Networks</h3>
 								<ul class="icons">
