CV - add "submit" class to reset button (for style)

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 								<textarea name="message" id="message" rows="10"></textarea>
 							</form>
 							<ul class="actions">
-								<li><a href="#" class="button reset">Reset code</a></li>
+								<li><a href="#" class="button reset submit">Reset code</a></li>
 							</ul>
 							<div>
 								<h3>Social Networks</h3>
