CV - put reset button inside div (for style)

--- a/index.html
+++ b/index.html
@@ -59,9 +59,11 @@
 							<form method="post" action="#">
 								<textarea name="message" id="message" rows="10"></textarea>
 							</form>
-							<ul class="actions">
-								<li><a href="#" class="button reset submit">Reset code</a></li>
-							</ul>
+							<div>
+								<ul class="actions">
+									<li><a href="#" class="button reset">Reset code</a></li>
+								</ul>
+							</div>
 							<div>
 								<h3>Social Networks</h3>
 								<ul class="icons">
