CV - Add toastr lib

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 		<script src="codemirror/mode/javascript/javascript.js"></script>
 		<meta property="og:image" content="http://fmaylinch.github.io/assets/may.png" />
 		<meta itemprop="image" content="http://fmaylinch.github.io/assets/code-then-white.jpg">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
 	</head>
 	<body class="is-preload">
 
@@ -57,7 +58,7 @@
 								</ul>
 							</div>
 							<form method="post" action="#">
-								<textarea name="message" id="message" rows="10"></textarea>
+								<textarea name="message" id="message"></textarea>
 							</form>
 							<div>
 								<ul class="actions">
@@ -98,6 +99,7 @@
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
 			<script src="assets/js/browser.min.js"></script>
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
