--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 		<script src="codemirror/lib/codemirror.js"></script>
 		<link rel="stylesheet" href="codemirror/lib/codemirror.css">
 		<link rel="stylesheet" href="codemirror/theme/panda-syntax.css">
-		<script src="codemirror/mode/javascript/javascript.js"></script>
 		<meta property="og:image" content="http://fmaylinch.github.io/assets/may.png" />
 		<meta itemprop="image" content="http://fmaylinch.github.io/assets/code-then-white.jpg">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
@@ -41,7 +40,7 @@
 						<div class="inner">
 							<div id="main">
 								<h1 id="title">Hi, I'm <strong>Ferran</strong></h1>
-								<p id="text1">I like to code and teach</p>
+								<p id="text1">I love coding and teaching</p>
 								<p id="text2">Now I work at <a target="_blank" href="https://cloud.yandex.com/en/">Yandex Cloud</a></p>
 							</div>
 						</div>
@@ -96,14 +95,17 @@
 			</footer>
 
 		<!-- Scripts -->
+		    <script src="https://cdn.jsdelivr.net/npm/lodash@4/lodash.min.js"></script>
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
+		    <!-- toastr requires jquery -->
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
 			<script src="assets/js/browser.min.js"></script>
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+   		    <script src="codemirror/mode/javascript/javascript.js"></script>
 		    <script src="assets/js/code.js"></script>
 	</body>
 </html>
