--- a/vite-ts-app/index.html
+++ b/vite-ts-app/index.html
@@ -1,13 +1,34 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + TS</title>
+    <title>Ferran Maylinch</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <link rel="stylesheet" href="/css/main.css" />
+    <noscript><link rel="stylesheet" href="/css/noscript.css" /></noscript>
+    <script src="/src/assets/codemirror/lib/codemirror.js"></script>
+    <link rel="stylesheet" href="/src/assets/codemirror/lib/codemirror.css">
+    <link rel="stylesheet" href="/src/assets/codemirror/theme/panda-syntax.css">
+    <meta property="og:image" content="http://fmaylinch.github.io/assets/may.png" />
+    <meta itemprop="image" content="http://fmaylinch.github.io/assets/code-then-white.jpg">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
   </head>
-  <body>
+  <body class="is-preload">
     <div id="app"></div>
+
+    <!-- My scripts -->
+    <script src="https://cdn.jsdelivr.net/npm/lodash@4/lodash.min.js"></script>
+    <script src="/src/assets/js/jquery.min.js"></script>
+    <script src="/src/assets/js/jquery.scrollex.min.js"></script>
+    <script src="/src/assets/js/jquery.scrolly.min.js"></script>
+    <!-- toastr requires jquery -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+    <script src="/src/assets/js/browser.min.js"></script>
+    <script src="/src/assets/js/breakpoints.min.js"></script>
+    <script src="/src/assets/js/util.js"></script>
+    <script src="/src/assets/codemirror/mode/javascript/javascript.js"></script>
+
+    <!-- original Vite script -->
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
