--- a/vite-ts-app/index.html
+++ b/vite-ts-app/index.html
@@ -4,8 +4,7 @@
     <title>Ferran Maylinch</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <link rel="stylesheet" href="/vite-public/css/main.css" />
-    <noscript><link rel="stylesheet" href="/vite-public/css/noscript.css" /></noscript>
+    <link rel="stylesheet" href="/vite-public/css/other.css" />
     <script src="/vite-public/codemirror/lib/codemirror.js"></script>
     <link rel="stylesheet" href="/vite-public/codemirror/lib/codemirror.css">
     <link rel="stylesheet" href="/vite-public/codemirror/theme/panda-syntax.css">
